--- a/mockup/styles.css
+++ b/mockup/styles.css
@@ -1,6 +1,6 @@
 html{
     font-family: sans-serif;
-    background-color: #000000;
+    background-color: #7BAFD4;
 }
 #home_screen{
     color:#bbbbbb;
@@ -21,7 +21,7 @@ html{
     font-family: "Times New Roman";
     font-size: 5em;
     font-variant: small-caps;
-    color: darkorange;
+    color: #FFFFFF;
     text-align: center;
     vertical-align: middle;
 }
