--- a/mockup/styles.css
+++ b/mockup/styles.css
@@ -18,8 +18,8 @@ html{
 }
 
 #title{
-    font-family: "Times New Roman";
-    font-size: 5em;
+    font-family: "Overpass";
+    font-size: 4em;
     font-variant: small-caps;
     color: #FFFFFF;
     text-align: center;
