--- a/mockup/styles.css
+++ b/mockup/styles.css
@@ -2,6 +2,16 @@ html{
     font-family: sans-serif;
     background-color: #7BAFD4;
 }
+
+body{
+    font-family: "Calibri", sans-serif;
+    font-size: 16px;
+    color: #FFFFFF;
+    margin: 0 auto;
+    max-width:800px;
+    padding: 2em 2em 2em;
+}
+
 #home_screen{
     color:#bbbbbb;
 }
