--- a/mockup/styles.css
+++ b/mockup/styles.css
@@ -21,7 +21,7 @@ html{
     font-family: "Times New Roman";
     font-size: 5em;
     font-variant: small-caps;
-    color: #FFFFFF;
+    color: #000000;
     text-align: center;
     vertical-align: middle;
 }
