--- a/mockup/index.css
+++ b/mockup/index.css
@@ -7,5 +7,5 @@
   background-image:url("456595747.0.jpg");
   background-repeat:no-repeat;
   background-position: center;
-  width:100%
+  width:100%;
 }
