--- a/mockup/styles.css
+++ b/mockup/styles.css
@@ -47,4 +47,9 @@ body{
 #login-section {
     color: #000000;
 }
-
+#back_photo {
+  background-image:url("456595747.0.jpg");
+  background-repeat:no-repeat;
+  background-position: center;
+  width:800px;
+}
