--- a/mockup/create_tournament.css
+++ b/mockup/create_tournament.css
@@ -1,3 +1,24 @@
 #new-tournament{
-  vertical-align: middle;
+    background-color: rgba(255, 255, 255, .60);
+    padding:inherit;
+    width: 450px;
+    font-size:30px;
+    line-height: 1.5em;
+    margin: 0 auto;
+}
+
+#numTeams{
+    font-size:20px;
+}
+
+input[type=text]{
+    font-size: 20px;
+}
+
+input[type=date]{
+    font-size: 20px;
+}
+
+input[type=submit]{
+    font-size: 20px;
 }
