--- a/mockup/styles.css
+++ b/mockup/styles.css
@@ -53,13 +53,12 @@ body{
 #tournament_list_button, #manage_button, #rules_button {
     background-color:#0b3c5d;
     text-decoration:none;
-    color: white;
+    color:white;
 }
 
 #create_button, #create_account{
     background-color: #d9b310;
-    color: white;
-    text-decoration:none;
+    color:white;
 }
 
 #tournament_list_button:hover, #manage_button:hover, #rules_button:hover, #create_account:hover{
@@ -67,7 +66,7 @@ body{
     background-color: #d9b310;
 }
 
-#create_button:hover{
+#create_button:hover, #create_account:hover{
     transform:scale(1.1);
     background-color: #0b3c5d;
 }
