--- a/mockup/create_tournament.css
+++ b/mockup/create_tournament.css
@@ -1,24 +1,24 @@
-#new-tournament{
-    background-color: rgba(255, 255, 255, .60);
-    padding:inherit;
+#new-tournament, #register_form{
+    background-color: rgba(50, 140, 193, .50);
     width: 450px;
     font-size:30px;
     line-height: 1.5em;
     margin: 0 auto;
+    padding:20px 20px 20px 20px;
+    display:block;
+    color:white;
+}
+
+#create_title{
+    font-family: 'Maiden Orange', cursive;
+    font-size: 4em;
+    color: #d9b310;
+    text-align: center;
+    vertical-align: middle;
+    padding-top: 30px;
 }
 
 #numTeams{
     font-size:20px;
 }
 
-input[type=text]{
-    font-size: 20px;
-}
-
-input[type=date]{
-    font-size: 20px;
-}
-
-input[type=submit]{
-    font-size: 20px;
-}
