--- a/mockup/styles.css
+++ b/mockup/styles.css
@@ -78,7 +78,7 @@ body{
 }
 
 #rules_list{
-    background-image:url("Clipboard4Kids.png");
+    background-image:url("Clipboard4KidsWithRules.png");
     background-repeat:no-repeat;
     background-size:contain;
     max-width: 45%;
