--- a/mockup/css/tournament_view.css
+++ b/mockup/css/tournament_view.css
@@ -16,7 +16,7 @@
 	align-items: baseline;
 	align-content: center;
 	height: 80%;
-	overflow-x: auto;
+	overflow-y: auto;
 }
 .tournament_card{
 	margin: 1em;
