--- a/mockup/css/tournament_view.css
+++ b/mockup/css/tournament_view.css
@@ -10,6 +10,8 @@
 	text-align: right;
 }
 #team_container{
+	flex-direction: row;
+	flex-wrap: wrap;
 	justify-content: center;
 	align-items: baseline;
 	align-content: center;
