--- a/mockup/css/tournament_view.css
+++ b/mockup/css/tournament_view.css
@@ -10,12 +10,9 @@
 	text-align: right;
 }
 #team_container{
-	justify-content: center;
-	align-items: baseline;
-	align-content: center;
+	width: 100%;
 	height: 800px;
 	overflow-y: scroll;
-	width: 1000;
 	display: table-cell;
 	margin:0 auto;
 }
