--- a/mockup/css/tournament_view.css
+++ b/mockup/css/tournament_view.css
@@ -22,8 +22,8 @@
 	background: white;
 	width: 200px;
 	height: 200px;
-	border: thin black;
-	text-align: center;
+	border: thin #d9b310;
+	text-align: middle;
 	display: inline-block;
 
 }
