--- a/mockup/css/tournament_view.css
+++ b/mockup/css/tournament_view.css
@@ -9,6 +9,16 @@
 .right{
 	text-align: right;
 }
+
+#back_pic {
+    background-image:url("CarolinaVolleyball.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    width:100%;
+    height:900px;
+    background-size:cover;    
+}
+
 #team_container{
 	width: 100%;
 	height: 800px;
