--- a/mockup/css/tournament_view.css
+++ b/mockup/css/tournament_view.css
@@ -11,7 +11,7 @@
 }
 
 #back_pic {
-    background-image:url("DeanDome.jpg");
+    background-image:url("CarolinaVolleyball.jpg");
     background-repeat: no-repeat;
     background-position: center;
     width:100%;
