--- a/mockup/css/tournament_view.css
+++ b/mockup/css/tournament_view.css
@@ -29,11 +29,11 @@
 .tournament_card{
 	margin: 1em;
 	padding: 1em;
-	background: white;
+    	background-color: rgba(50, 140, 193, .50);
 	width: 200px;
 	height: 200px;
 	border: thin #d9b310;
-	vertical-align: middle;
-	display: inline-block;
+	text-align: center;
+	display: table-cell;
 
 }
