--- a/mockup/your_tournaments.css
+++ b/mockup/your_tournaments.css
@@ -1,4 +1,4 @@
-#backgroundPhoto {
+#backGPhoto {
     background-image:url("CarolinaSoccer.jpg");
     background-repeat: no-repeat;
     background-position: center;
