--- a/mockup/css/tournament_view.css
+++ b/mockup/css/tournament_view.css
@@ -31,7 +31,7 @@
     	background-color: rgba(50, 140, 193, .50);
 	width: 200px;
 	height: 200px;
-	border: solid #d9b310;
+	border: solid #1d2731;
 	text-align: center;
 	display: inline-block;
 	color:white;
