--- a/mockup/styles.css
+++ b/mockup/styles.css
@@ -66,6 +66,11 @@ body{
     background-color: #d9b310;
 }
 
+#addTournamentButton, #seeAllTourneysButton
+{
+    width: 50%;
+}
+
 #create_button:hover, #create_account:hover{
     transform:scale(1.1);
     background-color: #0b3c5d;
