--- a/mockup/styles.css
+++ b/mockup/styles.css
@@ -69,6 +69,7 @@ body{
 #addTournamentButton, #seeAllTourneysButton
 {
     width: 40%;
+    display: inline-block;
 }
 
 #create_button:hover, #create_account:hover{
