--- a/mockup/styles.css
+++ b/mockup/styles.css
@@ -71,7 +71,7 @@ body{
     width: 40%;
     display: inline-block;
     text-align: center;
-    position: center;
+    margin: 0 auto;
 }
 
 #create_button:hover, #create_account:hover{
