--- a/mockup/your_tournaments.css
+++ b/mockup/your_tournaments.css
@@ -3,6 +3,6 @@
     background-repeat: no-repeat;
     background-position: center;
     width:100%;
-    height:900px;
+    height:auto;
     background-size:cover;    
 }
