--- a/mockup/styles.css
+++ b/mockup/styles.css
@@ -46,7 +46,7 @@ body{
     text-align: center;
     background-color: rgba(255, 255, 255, 0);
     position: relative;
-    padding: 15px 15px 15px 15px;
+    padding: 15px 15px 15px;
 }
 
 #title{
