--- a/mockup/tourneyView.css
+++ b/mockup/tourneyView.css
@@ -13,7 +13,7 @@ main{
   list-style:none;
   padding:0;
 }
-  .round .spacer{ flex-grow:1.5; }
+  .round .spacer{ flex-grow:.8; }
   .round .spacer:first-child,
   .round .spacer:last-child{ flex-grow:.5; }
   .round .game-spacer{
