--- a/mockup/tourneyView.css
+++ b/mockup/tourneyView.css
@@ -25,7 +25,7 @@ main{
 */
 body{
   font-family: 'Maiden Orange', cursive;
-  font-size:small;
+  font-size:16px;
   padding:10px;
   line-height:1.4em;
   color: #328cc1;
