--- a/mockup/tourneyView.css
+++ b/mockup/tourneyView.css
@@ -13,12 +13,12 @@ main{
   list-style:none;
   padding:0;
 }
-  .round .spacer{ flex-grow:1; }
+  .round .spacer{ flex-grow:.4; }
   .round .spacer:first-child,
   .round .spacer:last-child{ flex-grow:.5; }
 
   .round .game-spacer{
-    flex-grow:2;
+    flex-grow:1;
   }
 /*
  *  General Styles
