--- a/mockup/tourneyView.css
+++ b/mockup/tourneyView.css
@@ -13,9 +13,9 @@ main{
   list-style:none;
   padding:0;
 }
-  .round .spacer{ flex-grow:.5; }
+  .round .spacer{ flex-grow:.4; }
   .round .spacer:first-child,
-  .round .spacer:last-child{ flex-grow:; }
+  .round .spacer:last-child{ flex-grow:.6; }
 
   .round .game-spacer{
     flex-grow:1;
